trabajando en lahoja de impresion

--- a/inicio.html
+++ b/inicio.html
@@ -22,7 +22,7 @@
                         Vida y Ministerio
                     </h3>
                    
-                    <a href="#">leer mas</a>
+                    <a href="vym.html" onclick="redireccionar2()">leer mas</a>
                 </div>
             </div>
 
@@ -35,7 +35,7 @@
                         atalaya
                     </h3>
                    
-                    <a href="#">leer mas</a>
+                    <a href="#" >leer mas</a>
                 </div>
             </div>
 
