avances en hoja

--- a/vym.html
+++ b/vym.html
@@ -8,10 +8,10 @@
 </head>
 <body class="vymBody">
     <div class="BotonMenu">
-        <button class="btn">Vista Previa</button>
-        <button class="btn">Editar</button>
-        <button class="btn" >Imprimir PDF</button>
-        <button class="btn">Imprimir JPG</button>
+        <button class="btn  btnVym">Vista Previa</button>
+        <button class="btn btnVym">Editar</button>
+        <button class="btn btnVym" >Imprimir PDF</button>
+        <button class="btn btnVym">Imprimir JPG</button>
     </div>
     <div class="estructura1"> 
         <div class="nombreCongre">
@@ -24,11 +24,11 @@
                 <div class="rowHeader">
                     <img src="img/179.jpeg" class="icon" alt="">
                     <div class="row1"> 
-                        <div class="Semana">dd del mes</div>
+                        <div class="Semana"><input  type="text" placeholder="ingrese la Semana"></div>
                         <div class="columna3">
-                           <div class="celdaA1">celdaA1</div>
-                           <div class="celdaA2">celdaA2</div>
-                           <div class="celdaA3">celdaA3</div>
+                           <div class="celdaA1"><input type="text" placeholder="texto"></div>
+                           <div class="celdaA2"> Cancion:<input type="text" class="num" placeholder="num"> y oracion <input type="text" class="hermanos" placeholder="hermano"></div>
+                           <div class="celdaA3">Presidente:<input type="text" placeholder="Presidente" class="Presidente"></div>
                         </div>
                        
                     </div>
@@ -36,7 +36,10 @@
                 
             </div>
 
-            <div class="row"></div>
+
+            <div class="row">
+                <img src="img/PERLAS.jpg" alt="TESOROS"> <P>TESOROS DE LA BIBLIA</P>
+            </div>
             <div class="row"></div>
             <div class="row"></div>
             <div class="row"></div>
