--- a/vym.html
+++ b/vym.html
@@ -38,9 +38,13 @@
 
 
             <div class="row">
-                <img src="img/PERLAS.jpg" alt="TESOROS"> <P>TESOROS DE LA BIBLIA</P>
+                <img src="img/PERLAS.jpg" class="TESOROS" alt="TESOROS"> <P class="colorgreen subtitulos" >TESOROS DE LA BIBLIA</P>
             </div>
-            <div class="row"></div>
+            <div class="row">
+                <input type="text" placeholder="1-ingrese el tema" class="colorgreen widthauto">
+                <input type="text" placeholder="tiempo" class="tiempo widthauto">
+                <input type="text" placeholder="hermanoAsig" class="hermanoAsig">
+            </div>
             <div class="row"></div>
             <div class="row"></div>
             <div class="row"></div>
