--- a/vym.html
+++ b/vym.html
@@ -136,8 +136,9 @@
                     <input type="text" placeholder="num" class="num flex1">
                 </div>
                
-                <div class=" row flex1"><p class="fontS flex1"> Oracion:</p>
-                    <input type="text" placeholder="hermanoAsig " class="hermanoAsig width100">
+                <div class=" row flex1">
+                    <p class="fontS flex1"> Oracion:</p>
+                    <input type="text" placeholder="hermanoAsig " class="hermanoAsig right">
                 </div>
                 
             </div>
